# Transformers-2024-LoRA

./: Mod_ADD_Sub_ADD_finetuningLoRA (1).ipynb  README.md  Time_bifurcation  Time_bifurcation.py  Transformers_implementation (1).ipynb  Transformers_implementation.ipynb  Transformers_implementation_W:LayerNorm.ipynb  Transformers_implementation_w_out_Layer_norm (3).ipynb  albert_eigvals.ipynb  albert_eigvals_exp.ipynb  albert_eigvals_expes.ipynb
Llama2_Experiments/: .gitattributes  .gitignore  jupyter.yaml  llama_finetuning_analysis.yaml  llama_lora_eigenvalues.yaml  llama_ranks.yaml  pyproject.toml  requirement.txt  sft_llama.yaml
Llama2_Experiments/code/: finetuning_analysis.py  finetuning_llama2.py  get_eigenvalues_lora.py  rank_estimation_llama2.py  scalar_exp.ipynb  visu.ipynb
Llama2_Experiments/figures/: corr_average.eps  corr_average_random.eps  corr_average_wiki.eps  corr_layer_15.eps  corr_layer_15_random.eps  corr_layer_15_wiki.eps  corr_layer_2.eps  corr_layer_2_random.eps  corr_layer_2_wiki.eps  corr_layer_31_wiki.eps  corr_layer_47_wiki.eps  eigenvalues.eps  eigenvalues_0.eps  eigenvalues_1.eps  eigenvalues_15.eps  eigenvalues_1_lora.eps  eigenvalues_2.eps  eigenvalues_31.eps  eigenvalues_31_lora.eps  eigenvalues_lora_0.eps  eigenvalues_lora_1.eps  eigenvalues_lora_15.eps  eigenvalues_lora_2.eps  eigenvalues_lora_31.eps  eigenvalues_training_0.eps  eigenvalues_training_1.eps  eigenvalues_training_10.eps  eigenvalues_training_11.eps  eigenvalues_training_12.eps  eigenvalues_training_13.eps  eigenvalues_training_14.eps  eigenvalues_training_15.eps  (+32 more)
(+682 files in other folders)
